[metadata]
name = "asgard"
version = "0.1.0"
description = "Testing GH Actions for Web Development in Python"
authors = ["Denis Eliseev <d.a.eliseev@gmail.com>"]
license = "MIT"

# [tool.poetry.dependencies]
# python = "^3.9"
# setuptools = "^59.6.0"
# uvicorn = "^0.16.0"

# [tool.poetry.dev-dependencies]
# pytest = "^6.2.5"
# flake8 = "^4.0.1"
# coverage = "^6.2"
# isort = "^5.10.1"
# black = "^21.12b0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
ignore = ["W503", "E203", "B305"]
max-line-length = 88

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.pytest]
addopts = [
  "-rxXs",
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
filterwarnings = [
    # Turn warnings that aren't filtered into exceptions
    "error",
    "ignore: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated.*:DeprecationWarning",
    "ignore: The 'context' alias has been deprecated. Please use 'context_value' instead.:DeprecationWarning",
    "ignore: The 'variables' alias has been deprecated. Please use 'variable_values' instead.:DeprecationWarning",
    # Workaround for Python 3.9.7 (see https://bugs.python.org/issue45097)
    "ignore:The loop argument is deprecated since Python 3.8, and scheduled for removal in Python 3.10.:DeprecationWarning:asyncio",
]

[tool.coverage.run]
source_pkgs = ["asgard", "tests"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "if typing.TYPE_CHECKING:",
]
